k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: bookstore-svc
  labels:
    app: bookstore-api
    component: backend
spec:
  type: NodePort
  selector:
    app: bookstore-api
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 5000
      nodePort: 30090
